[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["sergiobarria <sbarria.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
